# stellar-memory

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  LICENSE  README.md  celestial_memory.db-shm  celestial_memory.db-wal  deploy.sh  docker-compose.yml  fly.toml  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  smithery.yaml  stellar-memory-setup.bat  stellar-memory-setup.sh  stellar_config.json  stellar_feedback.db  stellar_memory.db
.cursor/: mcp.json
celestial_engine/: __init__.py  auto_memory.py  importance.py  memory_function.py  middleware.py  models.py  rebalancer.py  zone_manager.py
docs/: 404.html  api-reference.md  changelog.md  getting-started.md  index.html  index.md  migration-v2-to-v3.md  rest-api.md  sitemap.xml  stellar-memory-수익화전략.md  stellar-memory-종합보고서.md
downloads/: Homunculus-Setup.bat  Homunculus-Setup.sh  launch.bat
examples/: middleware_anthropic.py  middleware_openai.py
landing/: index.html
migrations/: 001_add_user_id.sql
stellar-chrome/: manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
stellar_memory/: __init__.py  _plugin_manager.py  adaptive_decay.py  auth.py  benchmark.py  builder.py  cli.py  compat.py  config.py  consolidator.py  decay_manager.py  embedder.py  emotion.py  event_bus.py  event_logger.py  graph_analyzer.py  importance_evaluator.py  importer.py  knowledge_base.py  llm_adapter.py  mcp_server.py  memory_function.py  memory_graph.py  metacognition.py  models.py  multimodal.py  namespace.py  orbit_manager.py  persistent_graph.py  plugin.py  protocols.py  reasoning.py  scanner.py  scheduler.py  self_learning.py  serializer.py  server.py  session.py  stellar.py  stream.py  (+5 more)
stellar_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adapters.py  test_adaptive_decay.py  test_blackhole.py  test_builder.py  test_cli.py  test_compat.py  test_connectors.py  test_consolidation.py  test_dashboard.py  test_decay.py  test_embedder.py  test_emotion.py  test_event_bus.py  test_event_logger.py  test_graph_analyzer.py  test_health.py  test_importance.py  test_mcp_server.py  test_memory_function.py  test_memory_graph.py  test_middleware.py  test_namespace.py  test_orbit_manager.py  test_p8_init_mcp.py  test_p8_openapi.py  test_p8_quickstart.py  test_p8_version.py  test_p9_benchmark.py  test_p9_metacognition.py  test_p9_multimodal.py  test_p9_reasoning.py  (+22 more)
(+283 files in other folders)
