[project]
name = "stellar-memory"
version = "1.0.0"
description = "A celestial-structure-based AI memory management system - Give any AI human-like memory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Stellar Memory Contributors"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "memory", "llm", "mcp", "recall", "context"]
dependencies = []

[project.urls]
Homepage = "https://sangjun0000.github.io/stellar-memory/"
Repository = "https://github.com/sangjun0000/stellar-memory"
Documentation = "https://github.com/sangjun0000/stellar-memory#readme"
Changelog = "https://github.com/sangjun0000/stellar-memory/blob/main/CHANGELOG.md"

[project.scripts]
stellar-memory = "stellar_memory.cli:main"

[project.optional-dependencies]
# Core AI features
embedding = ["sentence-transformers>=2.2.0"]
llm = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
ollama = ["requests>=2.28.0"]
ai = ["sentence-transformers>=2.2.0", "anthropic>=0.18.0"]

# Protocols
mcp = ["mcp[cli]>=1.2.0"]
cli = ["mcp[cli]>=1.2.0"]

# Infrastructure
postgres = ["asyncpg>=0.29.0"]
redis = ["redis>=5.0.0"]
security = ["cryptography>=42.0.0"]
sync = ["websockets>=12.0"]
connectors = ["httpx>=0.27.0"]

# Server & Dashboard
server = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
dashboard = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]

# Adapters
adapters = ["langchain-core>=0.1.0"]

# Full install
full = [
    "sentence-transformers>=2.2.0", "anthropic>=0.18.0", "openai>=1.0.0",
    "requests>=2.28.0", "mcp[cli]>=1.2.0",
    "asyncpg>=0.29.0", "redis>=5.0.0", "cryptography>=42.0.0",
    "websockets>=12.0", "httpx>=0.27.0",
    "fastapi>=0.110.0", "uvicorn>=0.29.0",
    "langchain-core>=0.1.0",
]

docs = ["mkdocs-material>=9.5.0"]

dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
